kubernetes/apps/default/radarr/resources/gateway-listener.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main-gateway
  namespace: default
spec:
  listeners:
    - name: https-radarr
      protocol: HTTPS
      port: 443
      hostname: talos-radarr.chillincool.net
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: talos-radarr-chillincool-net-tls
